Upcoming:
- Fixed a few bugs in the matter booster en destination analyzer
- Made the timer less annoying to edit
- The tablet also works on the creative screen now

1.16-3.1.3:
- Fixed the peaceful module in the environmental controller

1.16-3.1.2:
- Fixed the sensor and environmental controller to consider more mobs as passive (like villagers)

1.16-3.1.1:
- Fixed a crash with the environmental controller which could cause crashes for non living entities (i.e. arrows or items)
- Fixed the 'noteleport' module in the environmental controller. It wouldn't actually do anything. Now it prevents enderman and shulkers as well as enderpearls

1.16-3.1.0:
- Ported the environmental controller (WIP)

1.16-3.0.26:
- Fixed integration between RFTools Control and RFTools Storage for the screen modules

1.16-3.0.25:
- The matter receiver and transmitter are now actually infusable

1.16-3.0.24:
- Fixed a problem with a potential crash in the matter receiver

1.16-3.0.23:
- The Analog works again

1.16-3.0.22:
- Fixed a bug in the simple dialer. It would not remember settings
- Fixed the tooltip for the Syringe
- Made the crafter gui slightly less confusing and fixed JEI integration in some cases

1.16-3.0.21:
- Bring back the ITeleportationManager API for RFTools Dimensions

1.16-3.0.20:
- Completely rewrote how the spawner handles the configuration of the spawner. These are now regular recipes that can be altered using a resourcepack

1.16-3.0.19:
- The tank works better (updates visually better when it's empty or not)
- Improved the item model for the tank

1.16-3.0.18:
- Truetype rendering works again for the screen
- Added a new 'forceNoTruetype' flag with which you can force truetype rendering to be disabled in all cases

1.16-3.0.17:
- Fixed a potential null-crash with the dimension dialer in some cases

1.16-3.0.16:
- Fixed a problem with the crafter where remembered slots were not rendered correctly

1.16-3.0.15:
- The redstone screen module works again

1.16-3.0.14: